--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.24.1",
     "@vapi-ai/web": "^2.3.8",
     "firebase": "^12.0.0",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.528.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
